--- a/places.html
+++ b/places.html
@@ -36,6 +36,33 @@
 
 <!---------------main------------------------------------>
 
+<h1 class="to-do">TO DO</h1>
+<h2 class="to-do-sub-head1">ARSENALEN</h2>
+<div id="container">
+<div class="row">
+  <div class="col-6">
+  <img src="assets/images/arsenalen.jpg" class="rounded float-center img-fluid" ></img>
+  </div>
+  <div class="col-6">
+  <img src="assets/images/arsenalen2.jpg" class="rounded float-center img-fluid" ></img>
+  </div>
+ <div class="col-12">
+    <p> The museum was opened on June 17, 2011 by King Carl XVI Gustaf , and has one of Europe's largest collections of military vehicles. There are 75 vehicles on site in the museum. In total, the museum owns 375 vehicles, most of which have been used in the Swedish army. The arsenal is run by a private, non-profit foundation. The Arsenale is part of the network of Sweden's Military History . In addition to being a museum, the Arsenals will also be SFHM 's central vehicle magazine.
+  In addition to the actual vehicle exhibition in the museum's main building, the museum also has other permanent exhibitions, such as the museum's collection of figures. The museum also has exhibitions in an outdoor environment with selected vehicles on a number of occasions. Within the museum there is a shop and a café.
+The Regiment Museum that was opened in 2014 shows the history of Södermanland's regiments, which extends from 1634 to 2005. The museum consists of a number of different exhibitions, where the story begins to be told at a soldier's village when Södermanland's regiment was an infantry regiment and ended inside the vehicle hall, when Södermanland's regiment was a modern armory regiment . 
+  </p>
+  <p>To be directed to Arsenalens website <a href="https://arsenalen.se/" target="_blank">CLICK HERE!!</a>
+
+  </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-6">
+      <img src=""></img>
+    </div>
+  </div>
+</div>
+
 
 
 <!----------------------footer------------------------>
