--- a/places.html
+++ b/places.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha256-c+C87jupO1otD1I5uyxV68WmSLCqtIoNlcHLXtzLCT0=" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   <title>Welcome To Strängnäs</title>
@@ -14,71 +15,121 @@
 </head>
 
 <body>
- 
- <!----------------------header-------------------------->
-  
+
+  <!----------------------header-------------------------->
+
   <!----------nav------->
-  
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link text-primary" href="index.html">HOME<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
-      <a class="nav-item nav-link text-primary" href="places.html">TO DO</a>
-      <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link text-primary" href="index.html">HOME<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
+        <a class="nav-item nav-link text-primary" href="places.html">TO DO</a>
+        <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<!---------------main------------------------------------>
+  <!---------------main------------------------------------>
 
-<h1 class="to-do">TO DO</h1>
-<h2 class="to-do-sub-head1">ARSENALEN</h2>
-<div id="container">
-<div class="row">
-  <div class="col-6">
-  <img src="assets/images/arsenalen.jpg" class="rounded float-center img-fluid" ></img>
-  </div>
-  <div class="col-6">
-  <img src="assets/images/arsenalen2.jpg" class="rounded float-center img-fluid" ></img>
-  </div>
- <div class="col-12">
-    <p> The museum was opened on June 17, 2011 by King Carl XVI Gustaf , and has one of Europe's largest collections of military vehicles. There are 75 vehicles on site in the museum. In total, the museum owns 375 vehicles, most of which have been used in the Swedish army. The arsenal is run by a private, non-profit foundation. The Arsenale is part of the network of Sweden's Military History . In addition to being a museum, the Arsenals will also be SFHM 's central vehicle magazine.
-  In addition to the actual vehicle exhibition in the museum's main building, the museum also has other permanent exhibitions, such as the museum's collection of figures. The museum also has exhibitions in an outdoor environment with selected vehicles on a number of occasions. Within the museum there is a shop and a café.
-The Regiment Museum that was opened in 2014 shows the history of Södermanland's regiments, which extends from 1634 to 2005. The museum consists of a number of different exhibitions, where the story begins to be told at a soldier's village when Södermanland's regiment was an infantry regiment and ended inside the vehicle hall, when Södermanland's regiment was a modern armory regiment . 
-  </p>
-  <p>To be directed to Arsenalens website <a href="https://arsenalen.se/" target="_blank">CLICK HERE!!</a>
+  <div id="container">
+    <h1 class="to-do">TO DO</h1>
+    <h2 class="to-do-sub-head1">ARSENALEN</h2>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/arsenalen.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/arsenalen2.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-12">
+        <p> The museum was opened on June 17, 2011 by King Carl XVI Gustaf , and has one of Europe's largest collections of military vehicles. There are 75 vehicles on site in the museum. In total, the museum owns 375 vehicles, most of which have been used
+          in the Swedish army. The arsenal is run by a private, non-profit foundation. The Arsenale is part of the network of Sweden's Military History . In addition to being a museum, the Arsenals will also be SFHM 's central vehicle magazine. In addition
+          to the actual vehicle exhibition in the museum's main building, the museum also has other permanent exhibitions, such as the museum's collection of figures. The museum also has exhibitions in an outdoor environment with selected vehicles on
+          a number of occasions. Within the museum there is a shop and a café. The Regiment Museum that was opened in 2014 shows the history of Södermanland's regiments, which extends from 1634 to 2005. The museum consists of a number of different exhibitions,
+          where the story begins to be told at a soldier's village when Södermanland's regiment was an infantry regiment and ended inside the vehicle hall, when Södermanland's regiment was a modern armory regiment .
+        </p>
+        <p>To visit the Arsenalen website <a href="https://arsenalen.se/" target="_blank">CLICK HERE!!</a>
 
-  </div>
-  </div>
-  
-  <div class="row">
-    <div class="col-6">
-      <img src=""></img>
+      </div>
     </div>
-  </div>
-</div>
-
-
-
-<!----------------------footer------------------------>
-<div class="footer-basic">
-        <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-          <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above.</h3>
-            <p class="copyright">Chris McIlgrew © 2019</p>
-        </footer>
+    <hr>
+    <h2 class="to-do-sub-head1">STRÄNGNÄS DOMKYRKA</h2>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/strangnas-cathedral.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/strangnas-cathedral2.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-12">
+        <p>The cathedral is built mainly of bricks in the characteristic Scandinavian Brick Gothic style. The original church was built of wood, probably during the first decades of the 12th century, on a spot where pagan rituals used to take place and where
+          the missionary Saint Eskil was killed during the mid 11th century. The wooden church was not rebuilt in stone and bricks until 1340, just after Strängnäs became a diocese. The cathedral contains a mixture of decorative styles. The nave, chancel,
+          and sanctuary are highly traditional, with a very large triptych reredos dominating the high altar at the east end of the building. However, two of the side chapels have been refurbished in highly contemporary style, with modern altars, and
+          abstract artistic decoration and religious symbolism. The cathedral contains the tombs of Charles IX of Sweden, Sten Sture the Elder, and Maria of Palatinate-Simmern. On 31 July 2018, the burial regalia (two crowns and an orb) of Charles IX
+          and Christina of Holstein-Gottorp were stolen in a daylight robbery with the thieves escaping by boat. In February 2019 it was reported that the regalia had been found and a man was facing trial accused of the theft.
+        </p>
+        <p>To visit the Strängnäs Cathedral website <a href="https://www.svenskakyrkan.se/strangnas" target="_blank">CLICK HERE!!</a></p>
+      </div>
     </div>
+    <hr>
+    <h2 class="to-do-sub-head1">STRÄNGNÄS VÄDERKVARN</h2>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/strangnas-cathedral.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/strangnas-cathedral2.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-12">
+        <p>Strängnäs windmill is located at Kvarnkullen in central Strängnäs , northwest of Strängnäs Cathedral . The mill was built in 1855, and is of the Dutch type . It has been owned by Strängnäs municipality since 1918 . The mill is visible from large
+          parts of the city, and is declared as a building memory by the county administrative board of Södermanland County , according to which it has a "great cultural and local history interest. On the hillside of Kvarnkull, down towards the city,
+          there are a lot of older wooden buildings that survived the city fire in 1871, including the Grassagården . Today's mill was ready in 1855, and the machinery is basically entirely made of wood. Via a drive shaft, the force from the sailcloth-covered
+          wings was transferred to four mill stones . The mill is of the Dutch type , with a rotatable top dome, which means that it can be rotated to optimally utilize the wind's power. The mill house is eight-sided and stands on the stone floor. It
+          is 14.5 meters high, with a diameter of 10.5 meters at ground level, which is greater than what mills of this type usually are. The wings are six in number and the largest six-wing mill in Sweden, and their diameter is 21.5 meters while the
+          circumference of the wing tips is 67.5 meters. The machinery is still almost completely intact, and the mill is probably still fully functional. On April 1, 1918, the mill was sold to Strängnäs municipality by Mathilda Karlsson and her children
+          Erland, Elsa and Edmund. The municipality paid SEK 40,000 for the mill with surrounding living quarters and barn. Then Erland Karlsson leased the mill for a few decades. The mill was electrified in 1922, with an open electric motor of 30 horsepower
+          from ASEA . After the mill has been taken out of operation, some small repairs have been made. The largest of these occurred in the 1950s; The foundation was strengthened in 1956 and a major refurbishment was made in 1957. Today, the mill is
+          included in Strängnäs Museum's area of responsibility. Hembygdsföreningen Strängnäs gille organizes special occasions on the mill, and in the summer there is a serving at the mill.
+        </p>
+        <p>To visit the Strängnäs väderkvarn website <a href="https://www.strangnas.se/uppleva-och-gora/turism/se-och-gora/sevardheter/sevardheter-i-strangnas" target="_blank">CLICK HERE!!</a></p>
+      </div>
+    </div>
+    <hr>
+    <h2 class="full-list">FOR A FULL LIST OF ACTIVITIES AND THINGS TO SEE</h2>
+    <a href="https://www.strangnas.se/uppleva-och-gora" target="_blank">CLICK HERE!!</a></p>
+  </div>
 
 
-  
+
+  <!----------------------footer------------------------>
+  <div class="footer-basic">
+    <footer>
+      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
+        <form class="form-inline justify-content-center">
+          <div class="form-group">
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+
+    </footer>
+    <p class="copyright">Chris McIlgrew © 2019</p>
+
+  </div>
+
+
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
 </html>
