changed layout of history.html and places.html and more images added

--- a/history.html
+++ b/history.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,47 +15,78 @@
 </head>
 
 <body>
- 
+
   <!----------------------header-------------------------->
-  
+
   <!----------nav------->
-  
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link text-primary" href="index.html">HOME<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
-      <a class="nav-item nav-link text-primary" href="places.html">TO DO</a>
-      <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link text-primary" href="index.html">HOME<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
+        <a class="nav-item nav-link text-primary" href="places.html">THINGS TO DO</a>
+        <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+      </div>
     </div>
+  </nav>
+
+
+
+  <!---------------main------------------------------------>
+  <div id="container">
+    <h1 class="to-do">HISTORY</h1>
+    <h2 class="to-do-sub-head1">ABOUT STRÄNGNÄS</h2>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/history pic1.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/history3.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-12">
+        <p>The city's name is first encountered in 1120, in reference to the Diocese. The name Strängnäs is derived from the fact that the city is located near a strait and on several hills, especially on two major ones, the "Mill Hill" and the "Cathedral Hill". In Old Norse strengr indicates a "narrow channel of water" and nes refers to an "isthmus", "narrow peninsula", or " headland", a very common toponymic in Scandinavia. Strängnäs was the native city of prominent reformer Laurentius Andreae and the home city of both Andreae and Olaus Petri. It became a regional centre of education and scholarship, and in 1626 the Thomas Gymnasium was established by King Gustavus
+          Adolphus, and is today Sweden's second oldest operating gymnasium. 
+     The urban and economic development of Strängnäs seems to have slowed after the Reformation, only flourishing temporarily with the arrival of energetic bishops. The city was slow to engage with the 19th century industrial development and investment found in other areas. A significant fire in 1871 led to large-scale reconstruction of the city, from which time its current appearance stems.
+        </p>
+        <div class="col-12">
+        <img src="assets/images/history pic2.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+
+      </div>
+    </div>
+    <hr>
   </div>
-</nav>
-  
   
 
-<!---------------main------------------------------------>
+  <!----------------------footer------------------------>
+  <div class="footer-basic">
+    <footer>
+      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
+        <form class="form-inline justify-content-center">
+          <div class="form-group">
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+
+    </footer>
+    <p class="copyright">Chris McIlgrew © 2019</p>
+
+  </div>
 
 
-<!----------------------footer------------------------>
-<div class="footer-basic">
-        <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-          <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above.</h3>
-            <p class="copyright">Chris McIlgrew © 2019</p>
-        </footer>
-    </div>
 
 
-
-  
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-</html>
 
+</html>
