--- a/places.html
+++ b/places.html
@@ -29,7 +29,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link text-primary" href="index.html">HOME<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
-        <a class="nav-item nav-link text-primary" href="places.html">TO DO</a>
+        <a class="nav-item nav-link text-primary" href="places.html">THINGS TO DO</a>
         <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
       </div>
     </div>
@@ -38,14 +38,11 @@
   <!---------------main------------------------------------>
 
   <div id="container">
-    <h1 class="to-do">TO DO</h1>
+    <h1 class="to-do">THINGS TO DO</h1>
     <h2 class="to-do-sub-head1">ARSENALEN</h2>
     <div class="row">
-      <div class="col-6">
+      <div class="col-12">
         <img src="assets/images/arsenalen.jpg" class="rounded float-center img-fluid"></img>
-      </div>
-      <div class="col-6">
-        <img src="assets/images/arsenalen2.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-12">
         <p> The museum was opened on June 17, 2011 by King Carl XVI Gustaf , and has one of Europe's largest collections of military vehicles. There are 75 vehicles on site in the museum. In total, the museum owns 375 vehicles, most of which have been used
@@ -54,6 +51,7 @@
           a number of occasions. Within the museum there is a shop and a café. The Regiment Museum that was opened in 2014 shows the history of Södermanland's regiments, which extends from 1634 to 2005. The museum consists of a number of different exhibitions,
           where the story begins to be told at a soldier's village when Södermanland's regiment was an infantry regiment and ended inside the vehicle hall, when Södermanland's regiment was a modern armory regiment .
         </p>
+
         <p>To visit the Arsenalen website <a href="https://arsenalen.se/" target="_blank">CLICK HERE!!</a>
 
       </div>
@@ -61,12 +59,10 @@
     <hr>
     <h2 class="to-do-sub-head1">STRÄNGNÄS DOMKYRKA</h2>
     <div class="row">
-      <div class="col-6">
-        <img src="assets/images/strangnas-cathedral.jpg" class="rounded float-center img-fluid"></img>
+      <div class="col-12">
+        <img src="assets/images/church.jpg" class="rounded float-center img-fluid"></img>
       </div>
-      <div class="col-6">
-        <img src="assets/images/strangnas-cathedral2.jpg" class="rounded float-center img-fluid"></img>
-      </div>
+
       <div class="col-12">
         <p>The cathedral is built mainly of bricks in the characteristic Scandinavian Brick Gothic style. The original church was built of wood, probably during the first decades of the 12th century, on a spot where pagan rituals used to take place and where
           the missionary Saint Eskil was killed during the mid 11th century. The wooden church was not rebuilt in stone and bricks until 1340, just after Strängnäs became a diocese. The cathedral contains a mixture of decorative styles. The nave, chancel,
@@ -80,11 +76,8 @@
     <hr>
     <h2 class="to-do-sub-head1">STRÄNGNÄS VÄDERKVARN</h2>
     <div class="row">
-      <div class="col-6">
-        <img src="assets/images/strangnas-cathedral.jpg" class="rounded float-center img-fluid"></img>
-      </div>
-      <div class="col-6">
-        <img src="assets/images/strangnas-cathedral2.jpg" class="rounded float-center img-fluid"></img>
+      <div class="col-12">
+        <img src="assets/images/windmill2.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-12">
         <p>Strängnäs windmill is located at Kvarnkullen in central Strängnäs , northwest of Strängnäs Cathedral . The mill was built in 1855, and is of the Dutch type . It has been owned by Strängnäs municipality since 1918 . The mill is visible from large
@@ -98,38 +91,38 @@
           included in Strängnäs Museum's area of responsibility. Hembygdsföreningen Strängnäs gille organizes special occasions on the mill, and in the summer there is a serving at the mill.
         </p>
         <p>To visit the Strängnäs väderkvarn website <a href="https://www.strangnas.se/uppleva-och-gora/turism/se-och-gora/sevardheter/sevardheter-i-strangnas" target="_blank">CLICK HERE!!</a></p>
+        <div>
+        </div>
+
+        <hr>
+        <h2 class="full-list">FOR A FULL LIST OF ACTIVITIES AND THINGS TO SEE</h2>
+        <a href="https://www.strangnas.se/uppleva-och-gora" target="_blank">ENTER HERE</a></p>
       </div>
-    </div>
-    <hr>
-    <h2 class="full-list">FOR A FULL LIST OF ACTIVITIES AND THINGS TO SEE</h2>
-    <a href="https://www.strangnas.se/uppleva-och-gora" target="_blank">CLICK HERE!!</a></p>
-  </div>
 
+      <hr>
+      <!----------------------footer------------------------>
+      <div class="footer-basic">
+        <footer>
+          <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+          <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
+            <form class="form-inline justify-content-center">
+              <div class="form-group">
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
 
+        </footer>
+        <p class="copyright">Chris McIlgrew © 2019</p>
 
-  <!----------------------footer------------------------>
-  <div class="footer-basic">
-    <footer>
-      <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
-        <form class="form-inline justify-content-center">
-          <div class="form-group">
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-
-    </footer>
-    <p class="copyright">Chris McIlgrew © 2019</p>
-
-  </div>
+      </div>
 
 
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
