--- a/.c9/metadata/preview-/history.html
+++ b/.c9/metadata/preview-/history.html
@@ -1,1 +1,1 @@
-{"changed":false,"filter":false,"title":"[P] /history.html","value":"","undoManager":{"mark":-1,"position":-1,"stack":[]},"preview":{"path":"/history.html","previewer":"previewBrowser","disableInjection":true},"timestamp":1562756486360}
+{"filter":false,"title":"[P] /history.html","undoManager":{"mark":-1,"position":-1,"stack":[]},"preview":{"path":"/history.html","previewer":"previewBrowser","disableInjection":true},"timestamp":1563202493878,"hash":"da39a3ee5e6b4b0d3255bfef95601890afd80709"}
