added images and video to images+video.html, deleted unwanted images

--- a/images+videos.html
+++ b/images+videos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,32 +15,86 @@
 </head>
 
 <body>
- 
-<!----------------------header-------------------------->
-  
+
+  <!----------------------header-------------------------->
+
   <!----------nav------->
-  
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link text-primary" href="index.html">HOME<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
-      <a class="nav-item nav-link text-primary" href="places.html">TO DO</a>
-      <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link text-primary" href="index.html">HOME<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
+        <a class="nav-item nav-link text-primary" href="places.html">THINGS TO DO</a>
+        <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+      </div>
     </div>
+  </nav>
+
+  <!---------------main------------------------------------>
+  <div id="container">
+    <h1 class="imagesvideos">IMAGES & VIDEOS</h1>
+    <div class="row">
+<div class="col-6 embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TQrNI2y-Zx4"></iframe>
+   </div>
+    <div class="col-6 embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LsxIj9Pks10"></iframe>
+     </div>
+     </div>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/pic1.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/pic2.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/pic3.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/pic4.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/pic10.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/pic8.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/pic9.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/pic19.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/images/pic18.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+      <div class="col-6">
+        <img src="assets/images/pic17.jpg" class="rounded float-center img-fluid"></img>
+      </div>
+    </div>
+    
+ 
   </div>
-</nav>
-
-<!---------------main------------------------------------>
 
 
 
-<!----------------------footer------------------------>
-<div class="footer-basic">
+
+  <!----------------------footer------------------------>
+  <div class="footer-basic">
     <footer>
       <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
       <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
@@ -55,10 +110,11 @@
 
   </div>
 
-  
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
 </html>
