--- a/history.html
+++ b/history.html
@@ -20,7 +20,7 @@
 
   <!----------nav------->
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -36,32 +36,29 @@
   </nav>
 
 
-
   <!---------------main------------------------------------>
   <div id="container">
-    <h1 class="to-do">HISTORY</h1>
-    <h2 class="to-do-sub-head1">ABOUT STRÄNGNÄS</h2>
+    <h1 class="history">HISTORY</h1>
+    <h2 class="history-sub-head1">ABOUT STRÄNGNÄS</h2>
     <div class="row">
       <div class="col-6">
-        <img src="assets/images/history pic1.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/history1.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-6">
-        <img src="assets/images/history3.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/history2.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-12">
-        <p>The city's name is first encountered in 1120, in reference to the Diocese. The name Strängnäs is derived from the fact that the city is located near a strait and on several hills, especially on two major ones, the "Mill Hill" and the "Cathedral Hill". In Old Norse strengr indicates a "narrow channel of water" and nes refers to an "isthmus", "narrow peninsula", or " headland", a very common toponymic in Scandinavia. Strängnäs was the native city of prominent reformer Laurentius Andreae and the home city of both Andreae and Olaus Petri. It became a regional centre of education and scholarship, and in 1626 the Thomas Gymnasium was established by King Gustavus
-          Adolphus, and is today Sweden's second oldest operating gymnasium. 
-     The urban and economic development of Strängnäs seems to have slowed after the Reformation, only flourishing temporarily with the arrival of energetic bishops. The city was slow to engage with the 19th century industrial development and investment found in other areas. A significant fire in 1871 led to large-scale reconstruction of the city, from which time its current appearance stems.
+        <p>The city's name is first encountered in 1120, in reference to the Diocese. The name Strängnäs is derived from the fact that the city is located near a strait and on several hills, especially on two major ones, the "Mill Hill" and the "Cathedral
+          Hill". In Old Norse strengr indicates a "narrow channel of water" and nes refers to an "isthmus", "narrow peninsula", or " headland", a very common toponymic in Scandinavia. Strängnäs was the native city of prominent reformer Laurentius Andreae
+          and the home city of both Andreae and Olaus Petri. It became a regional centre of education and scholarship, and in 1626 the Thomas Gymnasium was established by King Gustavus Adolphus, and is today Sweden's second oldest operating gymnasium.
+          The urban and economic development of Strängnäs seems to have slowed after the Reformation, only flourishing temporarily with the arrival of energetic bishops. The city was slow to engage with the 19th century industrial development and investment
+          found in other areas. A significant fire in 1871 led to large-scale reconstruction of the city, from which time its current appearance stems.
         </p>
-        <div class="col-12">
-        <img src="assets/images/history pic2.jpg" class="rounded float-center img-fluid"></img>
-      </div>
-
       </div>
     </div>
     <hr>
   </div>
-  
+
 
   <!----------------------footer------------------------>
   <div class="footer-basic">
