adding map.html as i forgot

--- a/history.html
+++ b/history.html
@@ -31,6 +31,7 @@
         <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
         <a class="nav-item nav-link text-primary" href="places.html">THINGS TO DO</a>
         <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+      <a class="nav-item nav-link text-primary" href="map.html">MAP</a>
       </div>
     </div>
   </nav>
@@ -41,10 +42,10 @@
     <h1 class="history">HISTORY</h1>
     <h2 class="history-sub-head1">ABOUT STRÄNGNÄS</h2>
     <div class="row">
-      <div class="col-6">
+      <div class="col-md-6 sm-12">
         <img src="assets/images/history1.jpg" class="rounded float-center img-fluid"></img>
       </div>
-      <div class="col-6">
+      <div class="col-md-6 sm-12">
         <img src="assets/images/history2.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-12">
