--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
       <a class="nav-item nav-link text-primary" href="places.html">THINGS TO DO</a>
       <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+      <a class="nav-item nav-link text-primary" href="map.html">MAP</a>
     </div>
   </div>
 </nav>
