--- a/places.html
+++ b/places.html
@@ -31,6 +31,7 @@
         <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
         <a class="nav-item nav-link text-primary" href="places.html">THINGS TO DO</a>
         <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
+      <a class="nav-item nav-link text-primary" href="map.html">MAP</a>
       </div>
     </div>
   </nav>
@@ -41,7 +42,7 @@
     <h1 class="to-do">THINGS TO DO</h1>
     <h2 class="to-do-sub-head1">ARSENALEN</h2>
     <div class="row">
-      <div class="col-12">
+      <div class="col-md-12 sm-12">
         <img src="assets/images/arsenalen.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-12">
@@ -94,9 +95,9 @@
     <hr>
     <h2 class="full-list">FOR A FULL LIST OF ACTIVITIES AND THINGS TO SEE</h2>
     <a href="https://www.strangnas.se/uppleva-och-gora" target="_blank">ENTER HERE</a></p>
+<hr>
   </div>
 
-  <hr>
   <!----------------------footer------------------------>
   <div class="footer-basic">
     <footer>
