found an error in the size of an image

--- a/images+videos.html
+++ b/images+videos.html
@@ -64,7 +64,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 sm-12l-6">
+      <div class="col-md-6 sm-12">
         <img src="assets/images/pic10.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-md-6 sm-12">
