changed col-md-12 sm-12 to col-sm-8 col-md-8 also added mx-auto to position images in center

--- a/places.html
+++ b/places.html
@@ -42,7 +42,7 @@
     <h1 class="to-do">THINGS TO DO</h1>
     <h2 class="to-do-sub-head1">ARSENALEN</h2>
     <div class="row">
-      <div class="col-md-12 sm-12">
+      <div class="col-sm-8 col-md-8 mx-auto">
         <img src="assets/images/arsenalen.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-12">
@@ -59,7 +59,7 @@
     <hr>
     <h2 class="to-do-sub-head1">STRÄNGNÄS DOMKYRKA</h2>
     <div class="row">
-      <div class="col-12">
+      <div class="col-sm-8 col-md-8 mx-auto">
         <img src="assets/images/church1.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-12">
@@ -75,7 +75,7 @@
     <hr>
     <h2 class="to-do-sub-head1">STRÄNGNÄS VÄDERKVARN</h2>
     <div class="row">
-      <div class="col-12">
+      <div class="col-sm-8 col-md-8 mx-auto">
         <img src="assets/images/windmill.jpg" class="rounded float-center img-fluid"></img>
       </div>
       <div class="col-12">
