--- a/images+videos.html
+++ b/images+videos.html
@@ -31,7 +31,7 @@
         <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
         <a class="nav-item nav-link text-primary" href="places.html">THINGS TO DO</a>
         <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
-      <a class="nav-item nav-link text-primary" href="map.html">MAP</a>
+        <a class="nav-item nav-link text-primary" href="map.html">MAP</a>
       </div>
     </div>
   </nav>
@@ -40,55 +40,53 @@
   <div id="container">
     <h1 class="imagesvideos">IMAGES & VIDEOS</h1>
     <div class="row">
-<div class="col-md-6 sm-12 embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TQrNI2y-Zx4"></iframe>
-   </div>
-    <div class="col-md-6 sm-12 embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LsxIj9Pks10"></iframe>
-     </div>
-     </div>
+      <div class="col-sm-12 col-md-6  embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TQrNI2y-Zx4"></iframe>
+      </div>
+      <div class="col-sm-12 col-md-6 embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LsxIj9Pks10"></iframe>
+      </div>
+    </div>
     <div class="row">
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic1.jpg" class="rounded float-center img-fluid"></img>
       </div>
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic2.jpg" class="rounded float-center img-fluid"></img>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic3.jpg" class="rounded float-center img-fluid"></img>
       </div>
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic4.jpg" class="rounded float-center img-fluid"></img>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic10.jpg" class="rounded float-center img-fluid"></img>
       </div>
-      <div class="col-md-6 sm-12">
+      <div class="ccol-sm-12 col-md-6">
         <img src="assets/images/pic8.jpg" class="rounded float-center img-fluid"></img>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic9.jpg" class="rounded float-center img-fluid"></img>
       </div>
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic19.jpg" class="rounded float-center img-fluid"></img>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic18.jpg" class="rounded float-center img-fluid"></img>
       </div>
-      <div class="col-md-6 sm-12">
+      <div class="col-sm-12 col-md-6">
         <img src="assets/images/pic17.jpg" class="rounded float-center img-fluid"></img>
       </div>
     </div>
-    
- 
   </div>
 
 
