found errors, removed </img> tags and added alt elements, changes </h3> to </h2>. changed the ammount of hyphons on comments to -- took off extra <title> element removed space in image filenames

--- a/places.html
+++ b/places.html
@@ -10,18 +10,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha256-c+C87jupO1otD1I5uyxV68WmSLCqtIoNlcHLXtzLCT0=" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  
   <title>Welcome To Strängnäs</title>
-  <title>Document</title>
+
 </head>
 
 <body>
 
-  <!----------------------header-------------------------->
 
-  <!----------nav------->
+  <!--nav-->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
+    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png" alt="sweden flag"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -31,19 +31,19 @@
         <a class="nav-item nav-link text-primary" href="history.html">HISTORY</a>
         <a class="nav-item nav-link text-primary" href="places.html">THINGS TO DO</a>
         <a class="nav-item nav-link text-primary" href="images+videos.html">IMAGES & VIDEOS</a>
-      <a class="nav-item nav-link text-primary" href="map.html">MAP</a>
+        <a class="nav-item nav-link text-primary" href="map.html">MAP</a>
       </div>
     </div>
   </nav>
 
-  <!---------------main------------------------------------>
+  <!--main-->
 
   <div id="container">
     <h1 class="to-do">THINGS TO DO</h1>
     <h2 class="to-do-sub-head1">ARSENALEN</h2>
     <div class="row">
       <div class="col-sm-8 col-md-8 mx-auto">
-        <img src="assets/images/arsenalen.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/arsenalen1.jpg" class="rounded float-center img-fluid" alt="image of a tank">
       </div>
       <div class="col-12">
         <p> The museum was opened on June 17, 2011 by King Carl XVI Gustaf , and has one of Europe's largest collections of military vehicles. There are 75 vehicles on site in the museum. In total, the museum owns 375 vehicles, most of which have been used
@@ -52,15 +52,14 @@
           a number of occasions. Within the museum there is a shop and a café. The Regiment Museum that was opened in 2014 shows the history of Södermanland's regiments, which extends from 1634 to 2005. The museum consists of a number of different exhibitions,
           where the story begins to be told at a soldier's village when Södermanland's regiment was an infantry regiment and ended inside the vehicle hall, when Södermanland's regiment was a modern armory regiment .
         </p>
-
-        <p>To visit the Arsenalen website <a href="https://arsenalen.se/" target="_blank">CLICK HERE!!</a>
+        <p>To visit the Arsenalen website <a href="https://arsenalen.se/" target="_blank">CLICK HERE!!</a></p>
       </div>
     </div>
     <hr>
     <h2 class="to-do-sub-head1">STRÄNGNÄS DOMKYRKA</h2>
     <div class="row">
       <div class="col-sm-8 col-md-8 mx-auto">
-        <img src="assets/images/church1.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/churchstrangnas.jpg" alt="image of church" class="rounded float-center img-fluid">
       </div>
       <div class="col-12">
         <p>The cathedral is built mainly of bricks in the characteristic Scandinavian Brick Gothic style. The original church was built of wood, probably during the first decades of the 12th century, on a spot where pagan rituals used to take place and where
@@ -76,7 +75,7 @@
     <h2 class="to-do-sub-head1">STRÄNGNÄS VÄDERKVARN</h2>
     <div class="row">
       <div class="col-sm-8 col-md-8 mx-auto">
-        <img src="assets/images/windmill.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/windmill1.jpg" alt="image of windmill" class="rounded float-center img-fluid">
       </div>
       <div class="col-12">
         <p>Strängnäs windmill is located at Kvarnkullen in central Strängnäs , northwest of Strängnäs Cathedral . The mill was built in 1855, and is of the Dutch type . It has been owned by Strängnäs municipality since 1918 . The mill is visible from large
@@ -94,15 +93,16 @@
     </div>
     <hr>
     <h2 class="full-list">FOR A FULL LIST OF ACTIVITIES AND THINGS TO SEE</h2>
-    <a href="https://www.strangnas.se/uppleva-och-gora" target="_blank">ENTER HERE</a></p>
-<hr>
+    <a href="https://www.strangnas.se/uppleva-och-gora" target="_blank">ENTER HERE</a>
+    <hr>
   </div>
 
-  <!----------------------footer------------------------>
+  <!--footer-->
+
   <div class="footer-basic">
     <footer>
       <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
+      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h2>
         <form class="form-inline justify-content-center">
           <div class="form-group">
             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
