--- a/map.html
+++ b/map.html
@@ -9,18 +9,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha256-c+C87jupO1otD1I5uyxV68WmSLCqtIoNlcHLXtzLCT0=" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  
   <title>Welcome To Strängnäs</title>
-  <title>Document</title>
+
 </head>
 
 <body>
  
-  <!----------------------header-------------------------->
   
-  <!----------nav------->
+  <!--nav-->
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
+  <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png" alt="sweden flag"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -35,23 +35,25 @@
   </div>
 </nav>
 
-<!---------------main------------------------------------>
+<!--main-->
+
 <main class=" m-0 p-0">
   <div class="container-fluid m-0 p-0">
 
     <!--Google map-->
+   
     <div id="map-container-google-4" class="z-depth-1-half map-container-4" style="height: 1000px">
-      <iframe src="https://maps.google.com/maps?q=strängnäs&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-        style="border:0" allowfullscreen></iframe>
+      <iframe src="https://maps.google.com/maps?q=strängnäs&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+        style="border:0"></iframe>
     </div>
-
-  </div>
+    </div>
 </main>
-<!----------------------footer------------------------>
+
+<!--footer-->
 <div class="footer-basic">
     <footer>
       <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
+      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h2>
         <form class="form-inline justify-content-center">
           <div class="form-group">
             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
