moved alt element to straight after img src

--- a/places.html
+++ b/places.html
@@ -43,7 +43,7 @@
     <h2 class="to-do-sub-head1">ARSENALEN</h2>
     <div class="row">
       <div class="col-sm-8 col-md-8 mx-auto">
-        <img src="assets/images/arsenalen1.jpg" class="rounded float-center img-fluid" alt="image of a tank">
+        <img src="assets/images/arsenalen1.jpg" alt="image of a tank" class="rounded float-center img-fluid" >
       </div>
       <div class="col-12">
         <p> The museum was opened on June 17, 2011 by King Carl XVI Gustaf , and has one of Europe's largest collections of military vehicles. There are 75 vehicles on site in the museum. In total, the museum owns 375 vehicles, most of which have been used
