changed videos back to original size

--- a/images+videos.html
+++ b/images+videos.html
@@ -90,16 +90,17 @@
         <img src="assets/images/pic11.jpg" alt="frozen water on rocks" class="rounded float-center img-fluid">
       </div>
     </div>
+    <div class="youtube-player">
     <div class="row">
-      <div class="col-sm-12 col-md-12 embed-responsive embed-responsive-16by9 overflow-y: scroll; -webkit-overflow-scrolling: touch;">
+      <div class="col-sm-12 col-md-6 embed-responsive embed-responsive-16by9">
        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TQrNI2y-Zx4" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-sm-12 col-md-12 embed-responsive embed-responsive-16by9 overflow-y: scroll; -webkit-overflow-scrolling: touch;">
+      <div class="col-sm-12 col-md-6 embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/J5FrnGHEJdw" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
-
+</div>
 <!--footer-->
  
   <div class="footer-basic">
