removed iframes as were not working and added videos with buttons

--- a/images+videos.html
+++ b/images+videos.html
@@ -80,26 +80,21 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-6 col-md-4">
+      <div class="col-sm-6 col-md-6">
         <img src="assets/images/pic14.jpg" alt="hepatica flowers" class="rounded float-center img-fluid">
       </div>
-      <div class="col-sm-6 col-md-4">
+      <div class="col-sm-6 col-md-6">
         <img src="assets/images/pic12.jpg" alt="frozen water on rocks" class="rounded float-center img-fluid">
       </div>
-      <div class="col-sm-6 col-md-4">
-        <img src="assets/images/pic11.jpg" alt="frozen water on rocks" class="rounded float-center img-fluid">
-      </div>
     </div>
-    <div style="overflow:auto;-webkit-overflow-scrolling:touch">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TQrNI2y-Zx4" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      
-     <div style="overflow:auto;-webkit-overflow-scrolling:touch">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/J5FrnGHEJdw" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-    
-  </div>
-
+   </div>
+   
+   <div class="container">
+  <img src="assets/images/strangnaspic.jpg" alt="video of strängnäs" class="rounded float-center img-fluid" >
+  <button class="btn"><a href="https://www.youtube.com/embed/J5FrnGHEJdw" target="_blank">WATCH VIDEO</a></button>
+</div>
+  
+ <hr>
   <!--footer-->
 
   <div class="footer-basic">
